[gd_scene load_steps=8 format=3 uid="uid://cda2mbhwhnu6o"]

[ext_resource type="Texture2D" uid="uid://txhkw4pb0wtv" path="res://Art Assets/CardAssets/pixelCardAssest_V01 (1).png" id="1_4xcya"]
[ext_resource type="Script" path="res://Scripts/card_base.gd" id="1_tjmfg"]
[ext_resource type="Texture2D" uid="uid://0t2or7bxxrfm" path="res://Art Assets/CardAssets/pixelCardAssest_V01 (8).png" id="3_pwxk4"]
[ext_resource type="Texture2D" uid="uid://bg3xw55qydej3" path="res://Art Assets/Attacks/Claw.png" id="4_1romn"]
[ext_resource type="Texture2D" uid="uid://qsnqu7hmgsoq" path="res://Art Assets/CardAssets/pixelCardAssest_V01 (18).png" id="7_x01bh"]
[ext_resource type="FontFile" uid="uid://bkelfqp2k881h" path="res://Art Assets/monogram.ttf" id="8_apwtt"]
[ext_resource type="Texture2D" uid="uid://bcp6gb2ksc6vf" path="res://Art Assets/CardAssets/pixelCardAssest_V01 (27).png" id="8_qwm6h"]

[node name="Card Base" type="MarginContainer"]
offset_right = 100.0
offset_bottom = 127.0
pivot_offset = Vector2(50, 62.5)
script = ExtResource("1_tjmfg")

[node name="Card" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_4xcya")

[node name="Frame" type="Sprite2D" parent="Card"]
position = Vector2(50, 39)
texture = ExtResource("3_pwxk4")

[node name="CardImage" type="Sprite2D" parent="Card/Frame"]
visibility_layer = 15
texture = ExtResource("4_1romn")

[node name="ManaBox" type="Sprite2D" parent="Card"]
position = Vector2(4, 4)
texture = ExtResource("8_qwm6h")

[node name="MarginContainer" type="MarginContainer" parent="Card/ManaBox"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.5
offset_top = -19.0
offset_right = -0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ManaLabel" type="Label" parent="Card/ManaBox/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_apwtt")
text = "?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionBox" type="Sprite2D" parent="Card"]
position = Vector2(50, 96)
texture = ExtResource("7_x01bh")

[node name="VBoxContainer" type="VBoxContainer" parent="Card/DescriptionBox"]
offset_left = -43.0
offset_top = -24.0
offset_right = 43.0
offset_bottom = 30.0
theme_override_constants/separation = 0

[node name="TitleLabel" type="Label" parent="Card/DescriptionBox/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_apwtt")
theme_override_font_sizes/font_size = 16
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Card/DescriptionBox/VBoxContainer"]
custom_minimum_size = Vector2(86, 32)
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="Card/DescriptionBox/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/line_spacing = -7
theme_override_fonts/font = ExtResource("8_apwtt")
theme_override_font_sizes/font_size = 16
text = "Description skdddd"
horizontal_alignment = 1
autowrap_mode = 2
